<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alpha.dogorcatperson.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canine_text" />

            <RadioGroup
                android:id="@+id/radioGroupCanine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioCanineNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_text" />

                <RadioButton
                    android:id="@+id/radioCanineYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes_text" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scale_text" />

            <SeekBar
                android:id="@+id/seekBarFeline"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:max="10" />

            <TextView
                android:id="@+id/seekBarProgressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/default_seekbar_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/cutest_text" />

            <CheckBox
                android:id="@+id/checkboxCutestDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog_title" />

            <CheckBox
                android:id="@+id/checkboxCutestCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_title" />

            <CheckBox
                android:id="@+id/checkboxCutestParrot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/parrot_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drool_text" />

            <RadioGroup
                android:id="@+id/radioGroupDrool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonDroolNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_text" />

                <RadioButton
                    android:id="@+id/radioButtonDroolYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes_text" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/showResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:text="@string/button_title" />

</RelativeLayout>
